Fixed footer width, adjusted spacing Switched map image to embedded map

--- a/Menu_Pages/Footer.CSS
+++ b/Menu_Pages/Footer.CSS
@@ -1,54 +1,76 @@
+body {
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: 0.15em;
+}
 
-footer {
+.footer-general {
     height: auto;
     background-color: #2A4656;
     padding: 5%;
     position: absolute;
-    /* bottom: 0; */
+    bottom: 0;
     width: 100%;
     /* max-height: 720px; */
-    display: inline-block;
+    /* display: inline-block; */
 }
 
 footer h1 {
     color: white;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
+    line-height: 56px;
+    /* font-size: 48px; */
+}
+
+.title {
+    display: inline-block;
+}
+
+.hours {
+    padding-top: 5%;
+}
+
+.hours-chunk {
+    margin-top: 10%;
 }
 
 .line {
     border-bottom: solid #F9DB6C;
     border-width: 5px;
-    width: 20%;
+    width: 70%;
 }
 
 h5 {
     color: white;
     padding-top: 10px;
+    font-size: 25px;
 }
 
-.hours {
-    position: absolute;
-    bottom: 0;
-    padding-bottom: 5%;
+.button {
+    padding-right: 3%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    max-height: 50px;
 }
 
 .hours-text {
     color: white;
-    padding-top: 5%;
+    padding-top: 20px;
+
 }
 
-
-.map {
-    padding-top: 5%;
-    max-width: 75%;
+iframe {
+    padding-top: 30px;
+    max-width: 100%;
+    max-height: 60%;
  }
 
 .location-chunk {
-    text-align: left;
+    display: inline-block;
+    text-align: center;
 }
 
-
 #address {
-    display: flex;
     text-align: center;
 }
